fixed gaps' overlapping events

--- a/src/jquery.skedTape.sass
+++ b/src/jquery.skedTape.sass
@@ -166,6 +166,7 @@ $skedtape-background-color: white !default
 		white-space: nowrap
 		overflow: hidden
 		font-size: 12px
+		pointer-events: none
 
 	&__event
 		background-color: $skedtape-entry-color
@@ -181,6 +182,7 @@ $skedtape-background-color: white !default
 		border: $skedtape-entry-border
 		transform-style: preserve-3d
 		min-width: 10px
+		cursor: default
 		&:hover
 			background-color: $skedtape-entry-color-hover
 		&--low-gap
